/' Ulike definisjoner og synlighet blir spesifisert i diagrammene med spesielle tegn før navnet. 
- : Der en variabel blir definert private. I en png fil blir dette visualisert med en tom rød firkant.
+ : Der en variabel blir definert public. I en png fil blir dette visualisert med en tom grønn sirkel.
# : Der en variabel blir definert protected. I en png fil blir dette visualisert med en tom gul diamant.
~ : Der en variabel blir definert static. I en png fil blir dette visualisert med en tom blå trekant.
- : Der en funksjon blir definert private. I en png fil blir dette visualisert med en full rød firkant.
+ : Der en funksjon blir definert public. I en png fil blir dette visualisert med en full grønn sirkel.
# : Der en funksjon blir definert protected. I en png fil blir dette visualisert med en full gul diamant.
~ : Der en funksjon blir definert static. I en png fil blir dette visualisert med en full blå trekant.
'/


@startuml

abstract class AbstractAccount {
    - String name;
    - double balance;
    - final int accountNumber;
    - User owner;
    - List<Transaction> transactionHistory;
    
    + AbstractAccount(String name, int accountNumber, User owner)
    + AbstractAccount(String name, User owner)
    
    + boolean deposit(double amount)
    + boolean withdraw(double amount)
    + void transfer(AbstractAccount recievingAccount, double amount)
    + boolean addToTransactionHistory(Transaction transaction)
    # void initialDeposit(double amount)
    # void removeOwnersOwnershipOfAccount()
    - int getNextAvailableAccountNumber(User user)
    - void recieveFromOtherAccount(double amount)
    
    + double getBalance()
    + int getAccountNumber()
    + String getName()
    + int getOwnerID()
    + List<Transaction> getTransactionHistory()
    + void setName(String name)
    + void setOwner(User owner)
    + String toString()
}

class CheckingAccount {
    + CheckingAccount(String name, double amount, int accountNumber, User owner)
    + CheckingAccount(String name, double amount, User owner)
}

class SavingsAccount {
    + SavingsAccount(String name, double balance, int accountNumber, User owner)
    + SavingsAccount(String name, double balance, User owner)
    
    + boolean isWithdrawalOrTransferPossible()
    + void withdraw(double amount)
    + transfer(AbstractAccount recievingAccount, double amount)
    - void checkIfWithdrawalOrTransferPossible()
    - long getNumberOfWithdrawals()
    - long getNumberOfTransfersFromThisAccount()
}

class BsuAccount {
    + BsuAccount(String name, double balance, int accountNumber, User owner)
    + BsuAccount(String name, double balance, User owner)
    
    + boolean isValidDeposit(double amount)
    + void deposit(double amount)
    + void withdraw(double amount)
    + void transfer(AbstractAccount recievingAccount, double amount)
    - void checkIfValidDeposit(double amount)
    - void checkIfUserDoesNotHaveBsu(User user)
}

class User {
    - String name;
    - final int userID;
    - Collection<AbstractAccount> accounts;
    
    + User(int userID)
    
    + boolean addAccount(AbstractAccount account)
    + boolean removeAccount(AbstractAccount account)
    
    + String getName()
    + int getUserID()
    + Collection<AbstractAccount> getAccounts()
    + Collection<Integer> getAccountNumbers()
    + AbstractAccount getAccount(int accountNumber)
    + void setName(String name)
    + String toString()

}

class Transaction {
    + enum TransactionType {DEPOSIT, WITHDRAWAL, TRANSFER};
    - final TransactionType type;
    - final String payer;
    - final int payersAccountNumber;
    - final String recipient;
    - final int recipientsAccountNumber;
    - final double amount;
    
    + Transaction(AbstractAccount payerAccount, AbstractAccount recipientAccount, double amount)
    + Transaction(String payer, int payersAccountNumber, String recipient, int recipientsAccountNumber, double amount)
    
    + TransactionType getType()
    + String getPayer()
    + String getRecipient()
    + int getPayersAccountNumber()
    + int getRecipientsAccountNumber()
    + double getAmount()
    + String toString()
}

class BankHelper {
    + boolean isOnlyLettersAndSpaces(String s)
    + boolean isValidName(String name)
    + boolean isPositiveAmount(double amount)
    + boolean isBalanceValidWhenAdding(double amount, AbstractAccount account)
    + boolean hasBSU(User user)
    ~ void checkIfAccountNumberIsTaken(int accountNumber, User user)
    ~ void checkIfValidUserID(int userID)
    ~ void checkIfValidName(String name)
    ~ void checkIfValidBalance(double amount, AbstractAccount account)
    ~ void checkIfValidAccountNumber(int accountNumber)
    ~ void checkIfValidAmount(double amount)
}


AbstractAccount <|-- CheckingAccount 
AbstractAccount <|-- SavingsAccount 
AbstractAccount <|-- BsuAccount 

User "1" -- "*" AbstractAccount : contains

Transaction "*" -- AbstractAccount : contains

BankHelper "1" -- AbstractAccount : uses

BankHelper "1" -- User : uses


@enduml